Přidán lepší algoritmus na dynimacký shlukování, reservace, my restaurant pro ownera